--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,6 +3,11 @@
 @tailwind utilities;
 
 
+@font-face {
+  font-family: 'Noto';
+  src: url('../public/fonts/Noto_Serif_JP/NotoSerifJP-Medium.otf');
+}
+
 *,*::before,*::after 
 {
   box-sizing: border-box;
@@ -10,11 +15,16 @@
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  list-style-type: none;
   scrollbar-color: transparent transparent;
 }
 *::-webkit-scrollbar {
   display: none;
+}
+
+.noto{
+  font-family: 'Noto';
+  font-style: italic;
+  font-weight: 500;
 }
 
 a {
@@ -43,4 +53,26 @@ a {
   transform: scaleX(0);
   transform-origin: right;
   transition: transform .3s;
+}
+
+.hoverBtn:hover p
+{
+  color: white;
+}
+.hoverBtn:hover span
+{
+  background: white;
+}
+
+.hoverBtn__div
+{
+  transform: scaleY(0);
+  transition: transform .3s;
+  transform-origin: top;
+}
+
+.hoverBtn:hover .hoverBtn__div
+{
+  transform: scaleY(1);
+  transform-origin: bottom;
 }
