--- a/styles/globals.css
+++ b/styles/globals.css
@@ -139,3 +139,8 @@ a {
 .bthBlackArrow:hover polygon{
   fill: white;
 }
+
+.hoverArrow:hover svg
+{
+  transform: translateX(100%) rotate(90deg);
+}
