--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,14 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 
-
 @font-face {
-  font-family: 'Noto';
-  src: url('../public/fonts/Noto_Serif_JP/NotoSerifJP-Medium.otf');
+  font-family: "Noto";
+  src: url("../public/fonts/Noto_Serif_JP/NotoSerifJP-Medium.otf");
 }
 
-*,*::before,*::after 
-{
+*,
+*::before,
+*::after {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
@@ -21,8 +21,8 @@
   display: none;
 }
 
-.noto{
-  font-family: 'Noto';
+.noto {
+  font-family: "Noto";
   font-style: italic;
   font-weight: 500;
 }
@@ -31,19 +31,16 @@ a {
   color: inherit;
   text-decoration: none;
 }
-.hoverLink
-{
-  display:inline-block;
+.hoverLink {
+  display: inline-block;
   position: relative;
-  padding-bottom: .1rem;
+  padding-bottom: 0.1rem;
 }
-.hoverLink:hover.hoverLink::before
-{
+.hoverLink:hover.hoverLink::before {
   transform: scaleX(1);
   transform-origin: left;
 }
-.hoverLink::before
-{
+.hoverLink::before {
   content: "";
   position: absolute;
   bottom: 0px;
@@ -52,119 +49,119 @@ a {
   background: white;
   transform: scaleX(0);
   transform-origin: right;
-  transition: transform .3s;
+  transition: transform 0.3s;
 }
 
-.hoverLink-b::before
-{
+.hoverLink-b::before {
   background: black;
 }
 
-.hoverBtn:hover p
-{
+.hoverBtn:hover p {
   color: white;
 }
-.hoverBtn:hover span
-{
+.hoverBtn:hover span {
   background: white;
 }
-.hoverBtn:hover path
-{
+.hoverBtn:hover path {
   fill: white;
 }
-.hoverBtn-w:hover p
-{
+.hoverBtn-w:hover p {
   color: #202020;
 }
-.hoverBtn-w:hover span
-{
+.hoverBtn-w:hover span {
   background: #202020;
 }
-.hoverBtn-w:hover path
-{
+.hoverBtn-w:hover path {
   fill: #202020;
 }
 
-.hoverBtn__div
-{
+.hoverBtn__div {
   transform: scaleY(0);
-  transition: transform .5s;
+  transition: transform 0.5s;
   transform-origin: top;
 }
 
-.hoverBtn:hover .hoverBtn__div
-{
+.hoverBtn:hover .hoverBtn__div {
   transform: scaleY(1);
   transform-origin: bottom;
 }
 
-.slider_btn div
-{
+.slider_btn div {
   transform: scaleY(0);
-  transition: transform .3s;
+  transition: transform 0.3s;
   transform-origin: top;
 }
-.slider_btn:hover div
-{
+.slider_btn:hover div {
   transform: scaleY(1);
   transform-origin: bottom;
 }
-.slider_btn:hover polygon
-{
-  fill:black;
+.slider_btn:hover polygon {
+  fill: black;
 }
-.slider_btn-w:hover polygon
-{
-  fill:white;
+.slider_btn-w:hover polygon {
+  fill: white;
 }
 
-
-
-.hoverItem span::before
-{
+.hoverItem span::before {
   transform: scaleX(0);
   transform-origin: right;
-  transition: transform .6s;
-} 
+  transition: transform 0.6s;
+}
 
-.hoverItem:hover span::before
-{
+.hoverItem:hover span::before {
   transform-origin: left;
   transform: scaleX(1);
-} 
+}
 
-.hoverItem:hover p
-{
+.hoverItem:hover p {
   color: black;
 }
-.hoverItem:hover div p
-{
+.hoverItem:hover div p {
   opacity: 0;
 }
 
-.hoverItem:hover .more
-{
+.hoverItem:hover .more {
   opacity: 1;
   transform: translateX(0);
 }
 
-.hoverItem:hover .hover-img
-{
+.hoverItem:hover .hover-img {
   height: 13vw;
-} 
+}
 
-.bthBlackArrow:hover polygon{
+.bthBlackArrow:hover polygon {
   fill: white;
 }
 
-.hoverArrow:hover svg
-{
+.hoverArrow:hover svg {
   transform: translateX(100%) rotate(90deg);
 }
 
-.hoverItem-b:hover .hover-img-b{
+.hoverItem-b:hover .hover-img-b {
   height: 15rem;
 }
-.hoverItem-b:hover p{
-  opacity: .7;
+.hoverItem-b:hover p {
+  opacity: 0.7;
+}
+
+.appear {
+  animation: appear 0.6s forwards, pulse 1s 0.8s infinite;
+}
+
+@keyframes appear {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes pulse {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0.5;
+  }
 }
